added the ability to add a topic